--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,29 @@
 .regularquestion {
     display: none;
 }
+
+ul {
+    list-style:none;
+    margin: 5%;
+}
+
+
+
+/* #chartdiv {
+    position: relative;
+    height:40vh; 
+    width:80vw;
+} */
+
+#myChart {
+    margin: 5%;
+    }
+
+
+
+#chartdiv {
+    position: relative;
+    height:90vh; 
+    width:90vw;
+}
+
