ajustes de formulario en los estilos

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,6 +10,7 @@
     font-weight: 16px;
 }
 
+
 body {
     background-color: var(--dark);
     color: var(--white);
@@ -112,6 +113,9 @@ ul {
     margin: 5%;
 }
 
+#bienvenidosection > * {
+    margin: 20px 0px;
+}
 
 #myChart {
     margin: 5%;
@@ -127,7 +131,7 @@ ul {
 }
 
 .sectionresults {
-    margin: 2%;
+    margin-top: 3%;
 }
 
 .sectionresults>div {
@@ -149,6 +153,17 @@ ul {
 #listapuntuaciones>li {
     font-size: 1.3em;
 }
+#nouser > section > form {
+    display: flex;
+    flex-direction: column;
+    margin: 1% 4%;
+}
+
+#nouser > section > form > input {
+    margin: 15px;
+}
+
+
 
 @media screen and (min-width: 768px) and (max-width: 1366px) {
 
@@ -160,6 +175,8 @@ ul {
     p {
         font-size: 1.8em;
     }
+
+    
 
 
     #homesection{
@@ -220,7 +237,19 @@ ul {
     #puntuacion {
         font-size: 7em;
     }
+
+    #nouser {
+        margin-top: 100px;
+    }
+
+   
+    #nouser > section > form {
+        margin: 2% 18%;
+    }
     
+    #nouser > section > form > input {
+        margin: 20px;
+    }
 
 
 }
@@ -234,7 +263,7 @@ ul {
     }
     
     p {
-        font-size: 2.3em;
+        font-size: 2.2em;
     }
 
     #homesection{
@@ -286,10 +315,18 @@ ul {
 
     #puntuacion {
         font-size: 7em;
+        
     }
 
     #mensajepuntuacion {
         padding: 30px;
     }
 
+    #nouser > section > form {
+        margin: 2% 30%;
+    }
+    
+    #nouser > section > form > input {
+        margin: 20px;
+    }
 }
